--- a/part2/config.json
+++ b/part2/config.json
@@ -1,12 +1,12 @@
 {
-  "ecmp": true,
+  "ecmp": false,
   "nodes": ["s1", "s2", "s3", "s4", "s5", "s6"],
   "weight_matrix": [
     [0, 10, 10, 0, 0, 0],
-    [10, 0, 0, 20, 0, 0],
-    [10, 0, 0, 0, 20, 0],
-    [0, 20, 0, 0, 0, 10],
-    [0, 0, 20, 0, 0, 10],
+    [10, 0, 0, 10, 0, 0],
+    [10, 0, 0, 0, 10, 0],
+    [0, 10, 0, 0, 0, 10],
+    [0, 0, 10, 0, 0, 10],
     [0, 0, 0, 10, 10, 0]
   ]
 }
