--- a/part3/p3_config.json
+++ b/part3/p3_config.json
@@ -1,8 +1,21 @@
 {
   "hosts": [
-    { "name": "h1", "ip": "10.0.12.2", "mac": "00:00:00:00:01:02" },
-    { "name": "h2", "ip": "10.0.67.2", "mac": "00:00:00:00:06:02" }
+    {
+      "name": "h1",
+      "ip": "10.0.12.2",
+      "mac": "00:00:00:00:01:02",
+      "switch": "s1",
+      "connected_subnet": "10.0.12.0/24"
+    },
+    {
+      "name": "h2",
+      "ip": "10.0.67.2",
+      "mac": "00:00:00:00:06:02",
+      "switch": "s6",
+      "connected_subnet": "10.0.67.0/24"
+    }
   ],
+
   "switches": [
     {
       "name": "s1",
@@ -55,8 +68,9 @@
       ]
     }
   ],
+
   "links": [
-    { "src": "s1", "dst": "s2", "cost": 10 },
+    { "src": "s1", "dst": "s2", "cost": 10},
     { "src": "s2", "dst": "s3", "cost": 20 },
     { "src": "s3", "dst": "s6", "cost": 10 },
     { "src": "s6", "dst": "s5", "cost": 10 },
@@ -64,3 +78,4 @@
     { "src": "s4", "dst": "s1", "cost": 10 }
   ]
 }
+
